TypeFinder done.  Moving in!